# lliurex-homework-harvester

./: CMakeLists.txt
debian/: changelog  control  copyright  lliurex-homework-harvester.install  lliurex-homework-harvester.pofiles  n4d-homeworkharvester-client.install  n4d-homeworkharvester-client.postinst  n4d-homeworkharvester-server.install  n4d-homeworkharvester-server.postinst  n4d-homeworkhaverster-client.install  n4d-homeworkhaverster-server.install
install-files/usr/share/applications/: lliurex-homework-harvester.desktop  lliurex-homework-sender.desktop
install-files/usr/share/caja-python/extensions/: lliurex-homework-harvester-extension.py
install-files/usr/share/lliurex-homework-harvester/rsrc/: ClientSide.glade  TeacherSide.glade
lliurex-po/: generate_po.sh
lliurex-po/lliurex-homework-harvester/: ca_ES@valencia.po  es.po  lliurex-homework-harvester.pot
lliurex-po/lliurex-homework-harvester-plugin/: ca@valencia.po  es.po  lliurex-homework-harvester-plugin.pot
n4d/: TeacherShare.py
rsrc/: resources.qrc  student.qml  teacher.qml
src/: CMakeLists.txt  build  harvesterstudentplugin.cpp  harvesterstudentplugin.desktop  harvesterstudentplugin.hpp  harvesterstudentplugin.json  harvesterteacherplugin.cpp  harvesterteacherplugin.desktop  harvesterteacherplugin.hpp  harvesterteacherplugin.json  lhh-backend.c  lhh-backend.h  lhh-provider.c  lhh-provider.h  libtool  lliurex-homework-harvester-plugin.c  locale.hpp  login.ui  studentapp.cpp  studentframe1.ui  studentwindow.cpp  studentwindow.hpp  teacherapp.cpp  teacherwindow.cpp  teacherwindow.hpp  util.hpp
